2005-11-10 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: fix inverted Gtk version
	check for stockUnindent.

2005-11-09 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtkglext/Graphics/UI/Gtk/OpenGL.hs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Config.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/General.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Context.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Pixmap.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Drawable.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/DrawingArea.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Window.chs: new gtkglext package, the
	Gtk+ OpenGL extension.

	* demo/opengl/RotatingCube.hs, demo/opengl/Makefile: add OpenGL demo.

	* gtkglext/gtkglext.cabal.in, gtkglext/gtkglext.pkg.in,
	gtkglext/gtkglext.package.conf.in: new build files for the gtkglext
	package.

	* tools/hierarchyGen/hierarchy.list: add extra GL classes.

	* configure.ac, Makefile.am: add build system support for the new
	gtkglext package.

	* gtkglext/Graphics/UI/Gtk/OpenGL/Types.chs: remove file that was
	accidentally added to cvs.

	* sourceview/sourceview.h, sourceview/sourceview.pkg.in,
	sourceview/sourceview.package.conf.in: remove unnecessary include.

	* docs/tutorial/Makefile: fix the base-url once and for all.

	* configure.ac: bump version to 0.9.10.1 to help track recent changes.

	* tools/apiGen/Makefile: add the gtkglext package to the apiGen
	system.

	* tools/apiGen/Marshal.hs: use refGObject function for non-constructor
	cases of marshaling GObject types.

2005-11-08 Duncan Coutts <duncan@coutts.uklinux.net>

	* sourceview/sourceview.pkg.in: probable fix for the problem of
	building the sourceview demo using -fvia-C with ghc 6.2 or earlier.

	* Makefile.am: make it easier to use extra flags when building haddock
	docs. Also add a "dist-docs" target for building a docs tarball.

2005-11-07 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/General/Structs.hsc: deal with the case that